# jvclrpctl

./: .gitignore  CLAUDE.md  LICENSE  README.md  config_example.py  pyproject.toml  requirements.txt  setup.py
docs/: HDR_AUTOMATION_GUIDE.md  LOGGER.md  MACOS_USB_SETUP.md  QUICKSTART.md  RASPBERRY_PI_SETUP.md  SYSTEMD_SERVICE.md  USB_SERIAL_MIGRATION.md
examples/: basic_control.py  curses_text.py  fullscreen_demo.py  hdr_automation.py  interactive_selector.py  jvc_diagnostic.py  jvc_nx7_test.py  jvc_raw_test.py  log_level_example.py  logger_demo.py  module_debug_example.py  nx7_unit_test.py  picture_mode_control.py  pyfiglet_demo.py  test_binary_ack.py  test_connection_handshake.py  test_debug_env.py  test_lumagen.py
jvclrpctl/: __init__.py  automation.py  display.py  logger.py
jvclrpctl/jvcctl/: __init__.py  commands.py  connection.py  constants.py  picture_modes.py
jvclrpctl/lumagen/: __init__.py  commands.py  connection.py  constants.py
lumagen_ui/: QUICKSTART.md  README.md  __init__.py  app.py  install.sh  jvc_control.py  lumagen-ui.service  lumagen_control.py  requirements.txt  uninstall.sh
lumagen_ui/static/: config_script.js  jvc_script.js  script.js  style.css
lumagen_ui/templates/: config.html  index.html  jvc.html
runner/: jvc-lrp-runner.py  runner.py
systemd/: README.md  install.sh  jvc-lrp-runner.service  uninstall.sh
tests/: __init__.py  test_connection.py  test_picture_modes.py
