[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jvclrpctl"
version = "0.1.0"
description = "Python library for controlling JVC D-ILA projectors via IP/Network commands"
readme = "README.md"
authors = [
    {name = "JVC Projector Control", email = "dev@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
]
keywords = ["jvc", "projector", "control", "automation", "network", "ip"]
requires-python = ">=3.7"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/jvclrpctl"
Documentation = "https://github.com/yourusername/jvclrpctl#readme"
Repository = "https://github.com/yourusername/jvclrpctl"
"Bug Tracker" = "https://github.com/yourusername/jvclrpctl/issues"

[tool.setuptools]
packages = ["jvclrpctl"]

[tool.setuptools.package-data]
jvclrpctl = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
